[package]
name = "ssr"
version = "0.1.0"
edition = "2021"
authors = ["Minhu Wang <minhuw@hey.com>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
libbpf-rs = { version = "0.24.6" }

[build-dependencies]
libbpf-cargo = "0.24.6"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "172793d6a409d98d1cfb843c80df73733e9f832f" }
