[package]
name = "ssr"
version = "0.1.0"
edition = "2021"
authors = ["Minhu Wang <minhuw@hey.com>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[dependencies]
anyhow = "1.0.90"
arrow = "53.2.0"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
lazy_static = "1.5.0"
libbpf-async = "0.2.0"
libbpf-rs = { version = "0.24.6" }
libc = "0.2.162"
parquet = "53.2.0"
pin-project = "1.1.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_arrow = { version = "0.12.2", features = ["arrow-53"] }
serde_with = "3.11.0"

[build-dependencies]
libbpf-cargo = "0.24.6"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "172793d6a409d98d1cfb843c80df73733e9f832f" }
